Fixed datepicker icon visibility in light mode

--- a/css/native/forms.css
+++ b/css/native/forms.css
@@ -48,7 +48,7 @@
 		color: var(--color-text-muted);
 	}
 
-	::-webkit-calendar-picker-indicator {
+	.kelp-theme-dark ::-webkit-calendar-picker-indicator {
 		filter: invert(1);
 	}
 
